# pants-test

./: .gitignore  pants.toml
my-app/src/app/: app.py
my-app/tests/: test_app.py
my-lib/: BUILD  pyproject.toml
my-lib/tests/: test_lib.py
