[build-system]
    requires = ["setuptools", "wheel"]
    build-backend = "setuptools.build_meta"

[project]
    name = "my-lib"
    authors = [
        {name = "Shravan Kulkarni"},
    ]
    description = "sample lib"
    requires-python = ">=3.10"
    classifiers = [
        "Programming Language :: Python :: 3",
    ]
    dependencies = ["numpy", "sqlalchemy"]
    version="0.0.1.dev"

[tool.setuptools]
    packages = ["lib"]
